--- a/group project/index.html
+++ b/group project/index.html
@@ -7,13 +7,15 @@
     <title>首页</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
-    <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "mm17plluu3");
-    </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C0VNBKGBK6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C0VNBKGBK6');
+</script>
 </head>
 
 <body>
