--- a/code/discuss.html
+++ b/code/discuss.html
@@ -15,6 +15,7 @@
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "mmft3ltnyc");
     </script>
+    <style>
         .headbox {
             width: 100%;
             background-color: #002048;
